@@ -3,7 +3,6 @@ package io.openaev.rest.payload.service;
 import static io.openaev.database.model.InjectorContract.CONTRACT_ELEMENT_CONTENT_KEY_TARGETED_ASSET_SEPARATOR;
 import static io.openaev.database.model.InjectorContract.CONTRACT_ELEMENT_CONTENT_KEY_TARGETED_PROPERTY;
 import static io.openaev.database.model.Tag.OPENCTI_TAG_NAME;
-import static io.openaev.helper.StreamHelper.fromIterable;
 import static io.openaev.helper.SupportedLanguage.en;
 import static io.openaev.helper.SupportedLanguage.fr;
 import static io.openaev.injector_contract.Contract.executableContract;
@@ -23,11 +22,10 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import io.openaev.aop.lock.Lock;
 import io.openaev.aop.lock.LockResourceType;
+import io.openaev.context.TenantContext;
 import io.openaev.database.model.*;
-import io.openaev.database.repository.AttackPatternRepository;
-import io.openaev.database.repository.InjectorContractRepository;
-import io.openaev.database.repository.InjectorRepository;
-import io.openaev.database.repository.PayloadRepository;
+import io.openaev.database.raw.RawPayloadRelatedIds;
+import io.openaev.database.repository.*;
 import io.openaev.database.specification.SpecificationUtils;
 import io.openaev.expectation.ExpectationBuilderService;
 import io.openaev.helper.SupportedLanguage;
@@ -38,11 +36,16 @@ import io.openaev.injector_contract.ContractTargetedProperty;
 import io.openaev.injector_contract.fields.*;
 import io.openaev.injectors.openaev.util.OpenAEVObfuscationMap;
 import io.openaev.model.inject.form.Expectation;
+import io.openaev.rest.document.DocumentService;
 import io.openaev.rest.domain.DomainService;
 import io.openaev.rest.domain.enums.PresetDomain;
+import io.openaev.rest.exception.ElementNotFoundException;
+import io.openaev.rest.injector_contract.form.InjectorContractDomainDTO;
 import io.openaev.rest.payload.PayloadUtils;
+import io.openaev.rest.payload.output.PayloadOutput;
 import io.openaev.rest.tag.TagService;
 import io.openaev.service.UserService;
+import io.openaev.utils.mapper.PayloadMapper;
 import io.openaev.utils.pagination.SearchPaginationInput;
 import jakarta.annotation.Resource;
 import jakarta.validation.constraints.NotBlank;
@@ -70,60 +73,77 @@ public class PayloadService {
   private final PayloadRepository payloadRepository;
   private final InjectorRepository injectorRepository;
   private final InjectorContractRepository injectorContractRepository;
-  private final AttackPatternRepository attackPatternRepository;
   private final ExpectationBuilderService expectationBuilderService;
   private final UserService userService;
+  private final DocumentService documentService;
+  private final PayloadUtils payloadUtils;
   private final DomainService domainService;
   private final TagService tagService;
-  private final PayloadUtils payloadUtils;
 
-  public void updateInjectorContractsForPayload(Payload payload) {
-    List<Injector> injectors = this.injectorRepository.findAllByPayloads(true);
-    injectors.forEach(injector -> updateInjectorContract(injector, payload));
+  private final PayloadMapper payloadMapper;
+
+  public InjectorContract synchroniseInjectorContractBasedOnPayload(
+      Payload payload, List<AttackPattern> attackPatterns, Set<Domain> domains, Set<Tag> tags) {
+    List<Injector> injectors =
+        this.injectorRepository.findAllByPayloadsAndTenantId(true, payload.getTenant().getId());
+
+    Injector referenceInjector = injectors.isEmpty() ? null : injectors.getFirst();
+    if (referenceInjector == null) {
+      return null;
+    }
+
+    InjectorContract injectorContractToUpdate =
+        injectorContractRepository
+            .findInjectorContractByPayload(payload)
+            .orElseGet(
+                () -> {
+                  String contractId = String.valueOf(UUID.randomUUID());
+                  InjectorContract newContract = new InjectorContract();
+                  newContract.setId(contractId);
+                  return newContract;
+                });
+
+    setInjectorContractPropertyBasedOnPayload(
+        injectorContractToUpdate, payload, attackPatterns, domains, tags, referenceInjector);
+    InjectorContract injectorContractSaved =
+        injectorContractRepository.save(injectorContractToUpdate);
+
+    // Link contract to all payload-supporting injectors via the owning side
+    Set<String> injectorIds = injectors.stream().map(Injector::getId).collect(Collectors.toSet());
+    injectorContractRepository.addContractToPayloadsInjectors(
+        injectorIds, injectorContractSaved.getCompositeId().getId());
+
+    return injectorContractSaved;
   }
 
   private void setInjectorContractPropertyBasedOnPayload(
-      InjectorContract injectorContract, Payload payload, Injector injector) {
+      @NotNull InjectorContract injectorContract,
+      @NotNull Payload payload,
+      List<AttackPattern> attackPatterns,
+      Set<Domain> domains,
+      Set<Tag> tags,
+      Injector injector) {
     Map<String, String> labels = Map.of("en", payload.getName(), "fr", payload.getName());
     injectorContract.setLabels(labels);
     injectorContract.setNeedsExecutor(true);
     injectorContract.setManual(false);
-    injectorContract.setInjector(injector);
+    injectorContract.addInjector(injector);
     injectorContract.setPayload(payload);
     injectorContract.setPlatforms(payload.getPlatforms());
-    injectorContract.setDomains(
-        domainService.upsertDomainEntities(new HashSet<>(Set.of(PresetDomain.TOCLASSIFY))));
-    injectorContract.setAttackPatterns(
-        fromIterable(
-            attackPatternRepository.findAllById(
-                payload.getAttackPatterns().stream().map(AttackPattern::getId).toList())));
+    injectorContract.setDomains(new HashSet<>(domains));
+    injectorContract.setTags(new HashSet<>(tags));
+    injectorContract.setAttackPatterns(new ArrayList<>(attackPatterns));
     injectorContract.setAtomicTesting(true);
 
     try {
-      Contract contract = buildContract(injectorContract.getId(), injector, payload);
+      Contract contract =
+          buildContract(injectorContract.getId(), injector, payload, new HashSet<>(domains));
       String content = mapper.writeValueAsString(contract);
       injectorContract.setContent(content);
       injectorContract.setConvertedContent(mapper.readValue(content, ObjectNode.class));
     } catch (JsonProcessingException e) {
       throw new RuntimeException(e);
     }
-  }
-
-  private void updateInjectorContract(Injector injector, Payload payload) {
-    Optional<InjectorContract> injectorContract =
-        injectorContractRepository.findInjectorContractByInjectorAndPayload(injector, payload);
-
-    InjectorContract injectorContractToUpdate;
-    if (injectorContract.isPresent()) {
-      injectorContractToUpdate = injectorContract.get();
-    } else {
-      String contractId = String.valueOf(UUID.randomUUID());
-      injectorContractToUpdate = new InjectorContract();
-      injectorContractToUpdate.setId(contractId);
-    }
-
-    setInjectorContractPropertyBasedOnPayload(injectorContractToUpdate, payload, injector);
-    injectorContractRepository.save(injectorContractToUpdate);
   }
 
   private ContractChoiceInformation obfuscatorField(String executor) {
@@ -161,7 +181,8 @@ public class PayloadService {
   private Contract buildContract(
       @NotNull final String contractId,
       @NotNull final Injector injector,
-      @NotNull final Payload payload) {
+      @NotNull final Payload payload,
+      final Set<Domain> domains) {
     Map<SupportedLanguage, String> labels = Map.of(en, injector.getName(), fr, injector.getName());
     ContractConfig contractConfig =
         new ContractConfig(
@@ -186,18 +207,16 @@ public class PayloadService {
           .getArguments()
           .forEach(
               payloadArgument -> {
-                if (ContractFieldType.Text.label.equals(payloadArgument.getType())) {
+                if (ArgumentType.TargetedAsset == payloadArgument.getType()) {
+                  List<ContractElement> targetedAssetsFields =
+                      targetedAssetFields(payloadArgument.getKey(), payloadArgument);
+                  targetedAssetsFields.forEach(builder::mandatory);
+                } else {
                   builder.mandatory(
                       textField(
                           payloadArgument.getKey(),
                           payloadArgument.getKey(),
                           payloadArgument.getDefaultValue()));
-
-                } else if (ContractFieldType.TargetedAsset.label.equals(
-                    payloadArgument.getType())) {
-                  List<ContractElement> targetedAssetsFields =
-                      targetedAssetFields(payloadArgument.getKey(), payloadArgument);
-                  targetedAssetsFields.forEach(builder::mandatory);
                 }
               });
     }
@@ -208,7 +227,7 @@ public class PayloadService {
         builder.build(),
         Arrays.asList(payload.getPlatforms()),
         true,
-        payload.getDomains());
+        domains);
   }
 
   private ContractExpectations expectations(InjectExpectation.EXPECTATION_TYPE[] expectationTypes) {
@@ -237,11 +256,58 @@ public class PayloadService {
     return expectationsField(expectations);
   }
 
-  public Payload duplicate(@NotBlank final String payloadId) {
+  public PayloadOutput convertPayloadInjectorContractCreationToPayloadOutput(
+      PayloadCreationService.PayloadInjectorContractCreationResult result) {
+    return payloadMapper.toPayloadOutput(
+        result.payload(),
+        result.injectorContract().getAttackPatterns().stream()
+            .map(AttackPattern::getId)
+            .collect(Collectors.toList()),
+        result.injectorContract().getDomains().stream()
+            .map(Domain::getId)
+            .collect(Collectors.toList()),
+        result.injectorContract().getTags().stream().map(Tag::getId).collect(Collectors.toList()));
+  }
+
+  public record PayloadWithRelatedEntities(
+      Payload payload,
+      List<String> attackPatternIds,
+      List<String> domainIds,
+      List<String> tagIds) {}
+
+  public PayloadWithRelatedEntities findPayloadWithRelatedEntities(String payloadId) {
+    Payload payload =
+        payloadRepository.findById(payloadId).orElseThrow(ElementNotFoundException::new);
+    RawPayloadRelatedIds relatedIds =
+        injectorContractRepository.findRelatedIdsByPayloadId(payloadId).orElse(null);
+
+    List<String> attackPatternIds =
+        relatedIds != null ? relatedIds.getAttack_pattern_ids() : List.of();
+    List<String> domainIds = relatedIds != null ? relatedIds.getDomain_ids() : List.of();
+    List<String> tagIds = relatedIds != null ? relatedIds.getTag_ids() : List.of();
+
+    return new PayloadWithRelatedEntities(payload, attackPatternIds, domainIds, tagIds);
+  }
+
+  public PayloadCreationService.PayloadInjectorContractCreationResult duplicate(
+      @NotBlank final String payloadId) {
     Payload origin = this.payloadRepository.findById(payloadId).orElseThrow();
+    Optional<InjectorContract> originInjectorContract =
+        injectorContractRepository.findInjectorContractByPayload(origin);
+
     Payload duplicated = payloadRepository.save(generateDuplicatedPayload(origin));
-    this.updateInjectorContractsForPayload(duplicated);
-    return duplicated;
+    InjectorContract injectorContract =
+        this.synchroniseInjectorContractBasedOnPayload(
+            duplicated,
+            originInjectorContract.isPresent()
+                ? originInjectorContract.get().getAttackPatterns()
+                : List.of(),
+            originInjectorContract.isPresent()
+                ? originInjectorContract.get().getDomains()
+                : Set.of(),
+            originInjectorContract.isPresent() ? originInjectorContract.get().getTags() : Set.of());
+    return new PayloadCreationService.PayloadInjectorContractCreationResult(
+        duplicated, injectorContract);
   }
 
   public Payload generateDuplicatedPayload(Payload originalPayload) {
@@ -296,7 +362,7 @@ public class PayloadService {
       List<String> payloadExternalIds, List<String> processedPayloadExternalIds) {
     return payloadExternalIds.stream()
         .filter(externalId -> !processedPayloadExternalIds.contains(externalId))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
@@ -321,6 +387,60 @@ public class PayloadService {
   }
 
   /**
+   * Retrieve the existing FileDrop Payload linked to the document id, or create a new one if it
+   * doesn't exist
+   *
+   * @param documentId to filter
+   * @param scenario to add to document if file drop is created
+   * @return retrieved or created FileDrop
+   */
+  public FileDrop getFileDropPayloadByDocument(String documentId, Scenario scenario) {
+    FileDrop fileDrop =
+        payloadRepository
+            .findByDocumentId(documentId)
+            .orElseGet(() -> this.createFileDropPayload(documentId));
+    fileDrop.getFileDropFile().getScenarios().add(scenario);
+    this.documentService.save(fileDrop.getFileDropFile());
+    return fileDrop;
+  }
+
+  /**
+   * Create a FileDrop Payload with linked provided document id
+   *
+   * @param documentId to link to FileDrop Payload
+   * @return created file drop payload
+   */
+  public FileDrop createFileDropPayload(String documentId) {
+    Document document = this.documentService.document(documentId);
+
+    FileDrop fileDrop = new FileDrop();
+    fileDrop.setFileDropFile(document);
+    fileDrop.setName(String.format("Drop %s file", document.getName()));
+    fileDrop.setDescription(
+        String.format("Drop of %s file into the specified endpoint", document.getName()));
+    fileDrop.setStatus(Payload.PAYLOAD_STATUS.VERIFIED);
+    fileDrop.setSource(Payload.PAYLOAD_SOURCE.FILIGRAN);
+    fileDrop.setType(FileDrop.FILE_DROP_TYPE);
+    fileDrop.setPlatforms(ALL_PLATFORMS);
+    fileDrop.setExecutionArch(Payload.PAYLOAD_EXECUTION_ARCH.ALL_ARCHITECTURES);
+    fileDrop.setExpectations(
+        new InjectExpectation.EXPECTATION_TYPE[] {
+          InjectExpectation.EXPECTATION_TYPE.PREVENTION,
+          InjectExpectation.EXPECTATION_TYPE.DETECTION
+        });
+
+    FileDrop saved = payloadRepository.save(fileDrop);
+    synchroniseInjectorContractBasedOnPayload(
+        saved,
+        List.of(),
+        domainService.upserts(
+            Set.of(InjectorContractDomainDTO.fromDomain(PresetDomain.getEndpoint())),
+            TenantContext.getCurrentTenant()),
+        tagService.findOrCreateTagsFromNames(new HashSet<>(Set.of(OPENCTI_TAG_NAME))));
+    return saved;
+  }
+
+  /**
    * Upsert for the Dynamic DNS Resolution payload, who run DNS Resolution by domain name given by
    * argument
    *
@@ -329,7 +449,7 @@ public class PayloadService {
   public DnsResolution getDynamicDnsResolutionPayload() {
     return payloadRepository
         .findById(DYNAMIC_DNS_RESOLUTION_UUID)
-        .map(payload -> (DnsResolution) payload)
+        .map(DnsResolution.class::cast)
         .orElseGet(this::createDynamicDnsResolutionPayload);
   }
 
@@ -353,7 +473,7 @@ public class PayloadService {
     dynamicDnsResolutionPayload.setExecutionArch(Payload.PAYLOAD_EXECUTION_ARCH.ALL_ARCHITECTURES);
 
     PayloadArgument argument = new PayloadArgument();
-    argument.setType("text");
+    argument.setType(ArgumentType.Text);
     argument.setKey(DYNAMIC_DNS_RESOLUTION_HOSTNAME_KEY);
     argument.setDefaultValue("filigran.io");
     dynamicDnsResolutionPayload.setArguments(new ArrayList<>(List.of(argument)));
@@ -364,15 +484,17 @@ public class PayloadService {
           InjectExpectation.EXPECTATION_TYPE.DETECTION
         });
 
-    dynamicDnsResolutionPayload.setDomains(
-        domainService.upsertDomainEntities(
-            Set.of(PresetDomain.ENDPOINT, PresetDomain.NETWORK, PresetDomain.URL_FILTERING)));
-
-    dynamicDnsResolutionPayload.setTags(
-        tagService.findOrCreateTagsFromNames(new HashSet<>(Set.of(OPENCTI_TAG_NAME))));
-
     DnsResolution saved = payloadRepository.save(dynamicDnsResolutionPayload);
-    updateInjectorContractsForPayload(saved);
+    synchroniseInjectorContractBasedOnPayload(
+        saved,
+        List.of(),
+        domainService.upsertDomainEntities(
+            Set.of(
+                PresetDomain.getEndpoint(),
+                PresetDomain.getNetwork(),
+                PresetDomain.getUrlFiltering()),
+            TenantContext.getCurrentTenant()),
+        tagService.findOrCreateTagsFromNames(new HashSet<>(Set.of(OPENCTI_TAG_NAME))));
     return saved;
   }
 }
